--- a/src/templates/register.html
+++ b/src/templates/register.html
@@ -1,18 +1,30 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <title>Registration Page</title>
     <style>
-        .container {
+        body {
             display: flex;
             justify-content: center;
             align-items: center;
             height: 100vh;
-            flex-direction: column; /* Added this line */
+        }
+
+        .container {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            flex-direction: column;
+            background-color: gray;
+            border-radius: 10px;
+            box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.3);
+            padding: 20px;
+            width: 300px;
         }
 
         .register-button {
-            margin-left: 100px; /* Added this line */
+            margin-left: 100px;
         }
     </style>
 </head>
@@ -29,7 +41,8 @@
             <label for="password">Password:</label>
             <input type="password" id="password" name="password" required><br><br>
             
-            <input type="submit" value="Register" class="register-button"> <!-- Added class attribute -->
+            
+            <input type="submit" value="Register" class="register-button">
         </form>
     </div>
 </body>
