--- a/src/templates/register.html
+++ b/src/templates/register.html
@@ -9,6 +9,7 @@
             justify-content: center;
             align-items: center;
             height: 100vh;
+            overflow: scroll;
         }
 
         .container {
@@ -20,12 +21,22 @@
             border-radius: 10px;
             box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.3);
             padding: 20px;
-            width: 300px;
-            overflow-y: scroll; /* Add this line to make the container scrollable */
+            width: 80%;
+        }
+
+        form span {
+            margin-right: -70%;
+            margin-top: -45px;
+            padding-bottom: 10%;
         }
 
         .register-button {
-            margin-left: 100px;
+            width: 150%; /* Increase the width */
+            height: 50px; /* Increase the height */
+            border-radius: 25px; /* Make the corners round */
+            background-color: rgb(0, 147, 221); /* Set the background color to cyan */
+            color: rgb(231, 231, 231); /* Set the text color to white */
+            font-size: 18px; /* Increase the font size */
         }
 
         form {
@@ -40,17 +51,27 @@
 
         input[type="text"],
         input[type="email"],
-        input[type="password"] {
-            width: 100%;
+        input[type="password"],
+        input[type="number"] {
+            width: 150%;
             padding: 10px;
             margin-bottom: 10px;
+            border-radius: 5px; /* Add this line to make the corners round */
+        }
+
+        textarea[name="medical-conditions"] {
+            width: 150%;
+            padding: 10px;
+            margin-bottom: 10px;
+            border-radius: 10px; /* Add this line to make the corners round */
+            font-size: 16px; /* Add this line to increase the font size */
         }
     </style>
 </head>
 <body>
     <div class="container" data-spy="scroll" data-target="#navbar-example" data-offset="0">
         <h1>Registration</h1>
-        <form>
+        <form method="post" action="/register">
             <label for="username">Username:</label>
             <input type="text" id="username" name="username" required><br><br>
             
@@ -60,6 +81,18 @@
             <label for="password">Password:</label>
             <input type="password" id="password" name="password" required><br><br>
             
+            <label for="blood-type">Blood Type:</label>
+            <input type="text" id="blood-type" name="blood-type" required placeholder="A, B, AB, O, A+, A-, B+, B-, AB+, AB-, O+, O-"><br><br>
+            
+            <label for="age">Age:</label>
+            <input type="number" id="age" name="age" required><br><br>
+            
+            <label for="weight">Weight:</label>
+            <input type="number" id="weight" name="weight" required><span>lb</span><br><br>
+            <label for="weight">Location:</label>
+            <input type="text" id="location" name="location" required placeholder="123 Main Street, City, State, ZIP" style="color: gray;">
+            <label for="medical-conditions">Medical Conditions:</label>
+            <textarea id="medical-conditions" name="medical-conditions" required></textarea><br><br>
             <input type="submit" value="Register" class="register-button">
         </form>
     </div>
