--- a/src/templates/register.html
+++ b/src/templates/register.html
@@ -73,8 +73,13 @@
         <h1>Registration</h1>
         <form method="post" action="/register">
             <label for="username">Username:</label>
-            <input type="text" id="username" name="username" required><br><br>
-            
+            {% if name_used %}
+            <input type="text" id="username" name="username" required value="{{ name }}"><br><br>
+            <label style="color: red;">Name is being used</label>
+            {% else %}
+                <input type="text" id="username" name="username" required><br><br>
+            {% endif %}
+                        
             <label for="email">Email:</label>
             <input type="email" id="email" name="email" required><br><br>
             
