--- a/src/templates/frontend.html
+++ b/src/templates/frontend.html
@@ -24,7 +24,7 @@
         /* Divides the screen into a left AND right side */
         #Overall-Container {
             width:100%;
-            height:682px;
+            height:683px;
             border: 1px solid #000;
         }
         
@@ -46,8 +46,20 @@
         .column {
             flex: 1;
             border: 1px solid #000;
+            text-align: center;
             padding: 10px;
+            height: 150px;
         }
+
+        .entry {
+            height: 150px;
+            width: 100%;
+            border: 1px solid #000;
+            display: flex;
+        }
+
+
+
 
 
 
@@ -55,30 +67,106 @@
         #Right-side {
             display: flex;
             flex-direction: column;
-        }
-
-        #Amount_Of_Blood_To_Donate {
-            flex: 1;
-            padding: 10px;
+            height: 682px;
             border: 1px solid #000;
         }
 
-        #Profile-Information {
-            flex: 1;
+        #Amount-Of-Blood-To-Donate {
+            /* flex: 1; */
             padding: 10px;
+            text-align: center;
+            margin-top: 20px;
+            margin-bottom: 10px;
+            margin-left: 20px;
+            margin-right: 20px;
+            border: 1px solid #000;
+            height: 50px;
+        }
+
+        #Profile-Information {
+            /* flex: 1; */
+            /* padding: 10px; */
+            text-align: center;
+            margin-top: 0px;
+            margin-bottom: 0px;
+            /* margin-left: 10px;
+            margin-right: 10px; */
+            /* border: 1px solid #000; */
+            height: 200px;
+        }
+
+        .container {
+            /* flex: 0; */
+            display: flex;
+        }
+
+        .column1 {
+            flex: 1;
+            padding: 5px;
+            margin-right: 5px;
+            /* width: 300px; */
+            height: 200px;
+        }
+
+        .column2 {
+            flex: 1;
+            padding: 5px;
+            margin-left: 5px;
+            /* width: 50px; */
+            height: 200px;
+        }
+
+        .box {
+            border: 1px solid #000;
+            height: 44%;
+            margin-bottom: 20px;
+        }
+
+        .avatar {
+            height: 114px;
+            width: 114px;
+            margin-left: 22%;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            margin-bottom: 20px;
+            border-radius: 100%;
+            border: 1px solid #000;
+        }
+
+        .bloodtype{
+            height: 27%;
             border: 1px solid #000;
         }
 
         #Long-Medical-History {
-            flex: 1;
+            /* flex: 1; */
             padding: 10px;
+            text-align: center;
+            margin-top: 10px;
+            margin-bottom: 10px;
+            margin-left: 20px;
+            margin-right: 20px;
             border: 1px solid #000;
+            height: 150px;
         }
 
         #Short-Medical-History {
-            flex: 1;
             padding: 10px;
+            text-align: center;
+            margin-top: 10px;
+            margin-bottom: 10px;
+            margin-left: 20px;
+            margin-right: 20px;
             border: 1px solid #000;
+            height: 110px;        
+        }
+
+        #Public-Profile {
+            /* padding: 10px; */
+            margin: 1px;
+            text-align: center;
+            height: 73px;
         }
         
     </style>
@@ -100,34 +188,80 @@
                     <div class="column">Distance From Me</div>
                 </div>
                 
-                <!-- Scroll through people -->
+                <!-- Scroll through people
                 <div class="Donors">
-                    <!-- TODO: how do you scroll through like 20 people at a time -->
-
                     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
                     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
                     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+                </div> -->
+                <!-- TODO: i dont know how to scroll through like a couple entries at a time. i can do static stuff though maybe -->
+
+
+
+                <!-- this is one static entry --> 
+                <div class="entry">
+                    <!-- avatar -->
+                    <div id="picture" style="height:115px; width:115px; border-radius:100%; border:1px solid #000; margin-left:20px; margin-top:15px; text-align:center; line-height:110px;">Avatar</div>
+
+                    <!-- blood type symbol -->
+                    <div id="blood-type-symbol" style="height:115px; width:115px; border:1px solid #000;margin-left:20px;margin-top:15px"></div>
+
+                    <!-- medical history -->
+                    <textarea id="medical-history" style="height:115px; width:220px; border:1px solid #000;margin-left:20px;margin-top:15px; overflow:scroll;"> Scrollable medical history </textarea>
+
+                    <!-- available blood -->
+                    <div id="blood-type-symbol" style="height:115px; width:115px; border:1px solid #000;margin-left:20px;margin-top:15px"></div>
+
+                    <!-- distance from you -->
+                    <div id="blood-type-symbol" style="height:115px; width:115px; border:1px solid #000;margin-left:20px;margin-top:15px"></div>
+
+                    <!-- connect button -->
+                    <button id="blood-type-symbol" style="height:50px; width:115px; border:1px solid #000;margin-left:20px;margin-top:45px; border-radius:40%; text-align:center; line-height:45px;">Connect</button>
+
 
                 </div>
+
             </div>
+            
+
+
             
             <!-- Right side -->
             <div id="Right-side" style="width:34%; float:left;">
                 
-                <div id="Amount-Of-Blood-To-Donate">Amount of Blood to Donate</div>
-                <div id="Profile-Information">TODO: Include rating, profile picture, location, and blood type in this chunk</div>
-                <div id="Long-Medical-History">TODO: Medical history</div>
-                <div id="Short-Medical-History">TODO: Shorter medical history</div>
+                <div id="Amount-Of-Blood-To-Donate">YOUR blood to donate</div>
+                <div id="Profile-Information">
+                    <div class="container">
+                        <div class="column1">
+                            <div class="box">Rating</div>
+                            <div class="box">Location</div>
+                        </div>
+                        <div class="column2">
+                            <div class="avatar">Avatar</div>
+                            <div class="bloodtype">Blood Type</div>
+                        </div>
+                    </div>
+
+                </div>
+                <textarea id="Long-Medical-History" style="overflow:scroll;">Box to show all YOUR medical history</textarea>
+                <textarea id="Short-Medical-History" style="overflow:scroll;">Box to show YOUR shorter medical history</textarea>
+                <div id="Public-Profile">
+                    <div id="Public-Buttons">
+                        <button id="public" style="width: 42%; height: 55px; margin: 5px; position: relative;">Public</button>
+                        <button id="private" style="width: 42%; height: 55px; margin: 5px; position: relative",>Private</button>
+                    </div>
+                </div>
+
             </div>
         </div>
 
         <!-- Left Side of Second Page -->
          <div id="Left Side Page Two">
                  
-                             <!-- Scroll through your Requests -->
-                <div class="Your Donors">
-                    <!-- TODO: Scroll through each potential donor -->
-                </div>
+            <!-- Scroll through your Requests -->
+            <div class="Your Donors">
+                <!-- TODO: Scroll through each potential donor -->
+            </div>
          </div>
         <!-- Right Side of Second Page -->
         <div id="Right Side Page Two">
