--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -143,6 +143,11 @@
             margin-bottom: 20px;
             border-radius: 100%;
             border: 1px solid #000;
+            overflow: hidden;
+        }
+
+        .avatar:hover {
+            box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
         }
 
         .bloodtype {
@@ -185,7 +190,23 @@
 <!-- Start of HTML stuff -->
 
 <body>
-
+    <script>
+        function sendConnectionRequest(yourUrl, user1, user2) {
+            fetch(yourUrl, {
+                method: 'POST',
+                headers: {
+                    'Content-Type': 'application/json'
+                },
+                body: JSON.stringify(
+                    {
+                        "user1": user1,
+                        "user2": user2
+                    }
+                )
+            });
+        }
+    </script>
+    
     <!-- Overall container to hold left and right sides -->
     <div id="Overall-Container">
 
@@ -212,31 +233,32 @@
             <!-- this is one static entry -->
             <!-- avatar -->
             <div class="scrollable_area">
-            {% for user in users %}
-            <div class="entry">
-                <div id="picture"
-                    style="height:115px; width:115px; border-radius:100%; border:1px solid #000; margin-left:20px; margin-top:15px; text-align:center; line-height:110px;">
-                    {{user[0]}}</div>
+                {% for user in users %}
+                <div class="entry">
+                    <div id="picture"
+                        style="height:115px; width:115px; border-radius:100%; border:1px solid #000; margin-left:20px; margin-top:15px; text-align:center; line-height:110px;">
+                        {{user[1]}}</div>
 
-                <!-- blood type symbol -->
-                <div id="blood-type-symbol"
-                    style="height:115px; width:115px; border:1px solid #000;margin-left:20px;margin-top:15px"></div>
+                    <!-- blood type symbol -->
+                    <div id="blood-type-symbol"
+                        style="height:115px; width:115px; border:1px solid #000;margin-left:20px;margin-top:15px">{{user[4]}}</div>
 
-                <!-- medical history -->
-                <textarea id="medical-history"
-                    style="height:115px; width:220px; border:1px solid #000;margin-left:20px;margin-top:15px; overflow:scroll;"> Scrollable medical history </textarea>
+                    <!-- medical history -->
+                    <textarea id="medical-history"
+                        style="height:115px; width:220px; border:1px solid #000;margin-left:20px;margin-top:15px; overflow:scroll;">{{user[12]}}</textarea>
 
-                <!-- available blood -->
-                <div id="blood-type-symbol"
-                    style="height:115px; width:115px; border:1px solid #000;margin-left:20px;margin-top:15px"></div>
+                    <!-- available blood -->
+                    <div id="blood-type-symbol"
+                        style="height:115px; width:115px; border:1px solid #000;margin-left:20px;margin-top:15px">{{user[14]}}</div>
 
-                <!-- distance from you -->
-                <div id="blood-type-symbol"
-                    style="height:115px; width:115px; border:1px solid #000;margin-left:20px;margin-top:15px"></div>
+                    <!-- distance from you -->
+                    <div id="blood-type-symbol"
+                        style="height:115px; width:115px; border:1px solid #000;margin-left:20px;margin-top:15px"></div>
 
-                <!-- connect button -->
-                <button id="blood-type-symbol"
-                    style="height:50px; width:115px; border:1px solid #000;margin-left:20px;margin-top:45px; border-radius:40%; text-align:center; line-height:45px;">Connect</button>
+                    <!-- connect button -->
+                    <button id="blood-type-symbol"
+                        style="height:50px; width:115px; border:1px solid #000;margin-left:20px;margin-top:45px; border-radius:15px; text-align:center; line-height:45px;"
+                        onclick="sendConnectRequest('{{ current_user[1] }}', '{{ user[1] }}')">Connect</button>
                 </div>
                 {% endfor %}
             </div>
@@ -255,7 +277,15 @@
                         <div class="box">Location</div>
                     </div>
                     <div class="column2">
-                        <div class="avatar">Avatar</div>
+                        <a href="/profile", style="text-decoration: none;">
+                            <button  class="avatar">
+                                <!-- FILEPATH: /Users/bigbon/nchack-2024/src/templates/index.html -->
+
+                                <!-- BEGIN: ed8c6549bwf9 -->
+                                <img src="{{ url_for('static', filename='Logo.png') }}" alt="Avatar" style="width: 130px; height: 130px;">
+                                <!-- END: ed8c6549bwf9 -->
+                            </button>
+                        </a>
                         <div class="bloodtype">Blood Type</div>
                     </div>
                 </div>
@@ -281,3 +311,4 @@
 </body>
 
 </html>
+
