--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -211,12 +211,15 @@
 
     <script>
         window.addEventListener('DOMContentLoaded', () => {
-            const healthBar = document.querySelector('.health_bar');
-            const valueDiv = document.querySelector('.health_value');
+            const healthBars = document.querySelectorAll('.health_bar');
+            const valueDivs = document.querySelectorAll('.health_value');
 
-            const value = parseInt(valueDiv.textContent) + 10;
-            healthBar.style.width = `${value}%`;
-            console.log(value);
+            healthBars.forEach((healthBar, index) => {
+                const valueDiv = valueDivs[index];
+                const value = parseInt(valueDiv.textContent);
+                healthBar.style.width = `${value/500*100}%`;
+                console.log(value);
+            });
         });
     </script>
 
@@ -224,8 +227,8 @@
     window.addEventListener('DOMContentLoaded', () => {
         const healthBar = document.querySelector('.your_health_bar');
         const valueDiv = document.querySelector('.your_health_value');
-
         const value = parseInt(valueDiv.textContent);
+        value = value / 500 * 100;
         healthBar.style.width = `${value}%`;
         console.log(value);
     });
@@ -240,9 +243,10 @@
         <div id="Left-side" style="width:66%; float:left;">
             <!-- Top row: blood types needed, amount of blood needed, distance from me -->
             <!-- TODO: add a container for the filter -->
+        <form method="post" action="/">
             <div class="Options">
                 <div class="column" style="white-space: nowrap;"><label for="bloodTypes">Blood type(s) needed</label><br><br>
-                    <select id="bloodTypes" name="Blood Types">
+                    <select id="bloodTypes" name="bloodTypes">
                         <option value="A+">A+</option>
                         <option value="A-">A-</option>
                         <option value="B+">B+</option>
@@ -252,15 +256,17 @@
                         <option value="O+">O+</option>
                         <option value="O-">O-</option>
                     </select>
-                    <input type="submit" value="Submit">
                 </div>
                 <div class="column" style="white-space: nowrap;"><label>Amount of Blood Needed</label><br><br>
-                    <input type="number" min="0" max="500" name="bloodAmount" required><span style="margin-left:10px;">mL</span>
+                    <input type="number" min="0" max="500" name="bloodAmount" id="bloodAmount" required><span style="margin-left:10px;">mL</span><br>
+                    <input type="submit" style="margin-top:10px;" value="Submit">
+
                 </div>
                 <div class="column" style="white-space: nowrap;"><label>Distance From Me</label><br><br>
-                    <input type="number" min="0" name="distanceFromUser" required><span style="margin-left:10px;">km</span>
+                    <input type="number" min="0" name="distanceFromUser" id="distanceFromUser" required><span style="margin-left:10px;">mi</span>
                 </div>
             </div>
+        </form>
 
             <!-- Scroll through people
                 <div class="Donors">
@@ -295,7 +301,7 @@
                         style="height:30px; width:150px; border:1px solid #000;margin-left:20px; text-align: center; justify-content: center; align-items: center;">
                         <div class="health_bar" style="height: 100%; width: 100%; background-color: red;"></div>
                         <div class="health_value" style="margin-top: -25px;">
-                            {{user[15]}}
+                            {{user[15]}} ml
                         </div>
                     </div>
 
@@ -323,7 +329,7 @@
             <div id="Amount-Of-Blood-To-Donate">
                 <div class="your_health_bar" style="height: 100%; width: 100%; background-color: red;"></div>
                 <div class="your_health_value" style="margin-top: -20px;">
-                    {{current_user[15]}}
+                    {{current_user[15]}} ml
                 </div>
             </div>
             <div id="Profile-Information">
