--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -193,7 +193,7 @@
 
 <body>
     <script>
-        function sendConnectRequest(yourUrl, user1, user2) {
+        function sendConnectRequest(event, yourUrl, user1, user2) {
             fetch(yourUrl, {
                 method: 'POST',
                 headers: {
@@ -205,7 +205,13 @@
                 })
             })
             .then(response => response.json())
-            .then(data => console.log(data));
+            .then(data => {
+                console.log(data);
+                const button = event.target;
+                    // Your code here
+                button.style.backgroundColor = 'rgb(21, 198, 106)';
+                button.disabled = true // Change the color to your desired color
+            });     
         }
     </script>
 
@@ -314,7 +320,7 @@
                     <!-- connect button -->
                     <button id="blood-type-symbol"
                         style="height:50px; width:115px; border:1px solid #000;margin-left:20px; margin-right: 10px; border-radius:15px; text-align:center; line-height:45px;"
-                        onclick="sendConnectRequest('/connect', '{{ current_user[1] }}', '{{ user[1] }}')">Connect</button>
+                        onclick="sendConnectRequest(event, '/connect', '{{ current_user[1] }}', '{{ user[1] }}')">Connect</button>
                 </div>
                 {% endif %}
                 {% endfor %}
