--- a/src/templates/requests_page.html
+++ b/src/templates/requests_page.html
@@ -4,9 +4,339 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Requests Page</title>
+
+    <style>
+        body {
+            margin: 10px;
+            padding: 0;
+            box-sizing: border-box;
+            height:700px;
+            /* border: 1px solid #000; */
+        }
+
+        .container {
+            display: flex;
+            width: 100%;
+            height: 40vh;
+            /* border: 1px solid #000; */
+        }
+
+        .column {
+            flex: 1;
+            display: flex;
+            flex-direction: column;
+            width:50%;
+            border: 1px solid #000;
+        }
+
+        .row {
+            /* flex: 1; */
+            display: flex;
+            flex-direction: column;
+            border: 1px solid #000;
+            text-align:center;
+        }
+
+        .row1 {
+            height:25%;
+            flex: 1;
+            text-align:center;
+            justify-content:center;
+            align-items:center;
+            display:flex;
+        }
+
+        .row2 {
+            height:75%;
+            flex: 3;
+            display:flex;
+            align-items:center;
+        }
+
+        .circle {
+            width:100px;
+            height:100px;
+            margin:5px;
+            border-radius:50%;
+            border: 1px solid #000;
+            margin-right:10px;
+            text-align:center;
+            justify-content:center;
+            align-items:center;
+            display:flex;
+        }
+
+        .icons-container {
+            display:flex;
+            justify-content:space-between;
+            /* margin-top:40px; */
+            padding:5px;
+            padding-left:40px;
+            padding-right:40px;
+            margin-top:5px;
+            border: 1px solid #000;
+        }
+
+        .blood-type {
+            width:100px;
+            height:100px;
+            margin:5px;
+            border: 1px solid #000;
+            margin-left:10px;
+            margin-right:10px;
+            text-align:center;
+            justify-content:center;
+            align-items:center;
+            display:flex;
+            border-radius:10%;
+        }
+
+        .available-blood {
+            width:100px;
+            height:100px;
+            margin:5px;
+            border: 1px solid #000;
+            margin-left:10px;
+            margin-right:10px;
+            text-align:center;
+            justify-content:center;
+            align-items:center;
+            display:flex;
+            border-radius:10%;
+        }
+
+        .distance-away {
+            width:100px;
+            height:100px;
+            margin:5px;
+            border: 1px solid #000;
+            margin-left:10px;
+            margin-right:10px;
+            text-align:center;
+            justify-content:center;
+            align-items:center;
+            display:flex;
+            border-radius:10%;
+        }
+
+        .rectangle {
+            width:120px;
+            height:75px;
+            margin:5px;
+            border: 1px solid #000;
+            margin-left:10px;
+            margin-top:17px;
+            text-align:center;
+            justify-content:center;
+            align-items:center;
+            display:flex;
+            border-radius:40%;
+        }
+
+
+        .middle-row {
+            width:100%;
+            height:40px;
+            border: 1px solid #000;
+            text-align:center;
+            justify-content:center;
+            align-items:center;
+            display:flex;
+        }
+
+
+        .last-row {
+            display:flex;
+            /* border: 1px solid #000; */
+        }
+
+        .small-column {
+            flex: 1;
+            border: 1px solid #000;
+        }
+
+        .small-row {
+            height: 90%;
+            display: flex;
+        }
+
+        .small-column-1, .small-column-2, .small-column-3 {
+            flex: 1;
+            /* border: 1px solid #000; */
+            text-align: center;
+            justify-content: center;
+            align-items: center;
+            display: flex;
+            flex-direction:column;
+            height:50vh;
+        }
+
+        .column-1-top {
+            display:flex;
+            flex:1;
+            width:100%;
+            /* border: 1px solid #000; */
+        }
+
+        .column-1-bottom {
+            flex:2;
+            width:100%;
+            /* border: 1px solid #000; */
+        }
+
+        .column-1-small-rectangle {
+            width: 72%;
+            height:90%;
+            justify-content: center;
+            align-items: center;
+            display: flex;
+            margin-top:5px;
+            margin-left:5px;
+            border: 1px solid #000;
+            border-radius:10%;
+        }
+
+        .column-1-big-rectangle {
+            width: 96%;
+            height:93%;
+            justify-content: center;
+            align-items: center;
+            display: flex;
+            margin-top:5px;
+            margin-left:10px;
+            border: 1px solid #000;
+            border-radius:10%;
+        }
+
+        .column-2 {
+            flex:1;
+            width:100%;
+            /* border: 1px solid #000; */
+        }
+
+        .column-2-rectangle {
+            width: 96%;
+            height:95%;
+            justify-content: center;
+            align-items: center;
+            display: flex;
+            margin-top:5px;
+            margin-left:10px;
+            border: 1px solid #000;
+            border-radius:10%;
+        }
+
+        .column-3-top {
+            flex:2;
+            width:100%;
+            /* border: 1px solid #000; */
+        }
+
+        .column-3-bottom {
+            flex:1;
+            width:100%;
+            /* border: 1px solid #000; */
+            justify-content: center;
+            align-items: center;
+            display:flex;
+        }
+
+        .column-3-big-rectangle {
+            width: 96%;
+            height:93%;
+            justify-content: center;
+            align-items: center;
+            display: flex;
+            margin-top:5px;
+            margin-left:10px;
+            border: 1px solid #000;
+            border-radius:10%;
+        }
+
+        .column-3-small-rectangle {
+            width: 33%;
+            height:84%;
+            justify-content: center;
+            align-items: center;
+            display: flex;
+            margin-bottom:12px;
+            margin-left:10px;
+            border: 1px solid #000;
+            margin-left:30px;
+            margin-right:30px;
+            border-radius:10%;
+        }
+
+
+        
+
+
+
+    </style>
 </head>
 <body>
-    <h1>Welcome to the Requests Page</h1>
-    <!-- Add your content here -->
+    <div class="container">
+        <div class="column">
+            <div class="row row1">
+                <p>Your requests</p>
+            </div>
+            <div class="row row2">
+                <div class="icons-container"">
+                    <div class="circle">Avatar</div>
+                    <div class="blood-type">Blood type</div>
+                    <div class="available-blood">Available blood</div>
+                    <div class="distance-away">Distance away</div>
+                    <div class="rectangle">Status</div>
+                </div>
+            </div>
+        </div>
+        <div class="column">
+            <div class="row row1">
+                <p>Other's requests</p>
+            </div>
+            <div class="row row2">
+                <div class="icons-container">
+                    <div class="circle">Avatar</div>
+                    <div class="blood-type">Blood type</div>
+                    <div class="available-blood">Available blood</div>
+                    <div class="distance-away">Distance away</div>
+                    <div class="rectangle">Status</div>
+                </div>
+            </div>
+        </div>
+    </div>
+    
+    <div class="middle-row">Accepted</div>
+
+    <div class="last-row">
+        <div class="small-column">
+            <div class="small-row">
+                <div class="small-column-1">
+                    <div class="column-1-top">
+                        <div class="circle">Avatar</div>
+                        <div class="column-1-small-rectangle">Rating</div>
+                    </div>
+                    <div class="column-1-bottom">
+                        <div class="column-1-big-rectangle">Contact Info</div>
+                    </div>
+                </div>
+                <div class="small-column-2">
+                    <div class="column-2">
+                        <div class="column-2-rectangle">Medical History</div>
+                    </div>
+                </div>
+                <div class="small-column-3">
+                    <div class="column-3-top">
+                        <div class="column-3-big-rectangle">Distance from you</div>
+                    </div>
+                    <div class="column-3-bottom">
+                        <div class="column-3-small-rectangle">Finished</div>
+                        <div class="column-3-small-rectangle">Did not finish</div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
 </body>
 </html>
