--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -276,7 +276,8 @@
                     </select>
                 </div>
                 <div class="column" style="white-space: nowrap;"><label for="bloodAmount">Amount of Blood Needed</label><br><br>
-                    <input type="number" id="bloodAmount" min="0" max="500" name="bloodAmount" required><span style="margin-left:10px;">mL</span>
+                    <input type="number" id="bloodAmount" min="0" max="500" name="bloodAmount" required><span style="margin-left:10px;">mL</span><br>
+                    <input type="submit" style="margin-top: 10px;" value="Submit">
                 </div>
                 <div class="column" style="white-space: nowrap;"><label for="rangeSlider">Distance From Me</label><br><br>
                     <input type="range" id="rangeSlider" min="0" max="300" step="1" value="50" class="slider" name="distanceFromUser" required><br>
