--- a/src/templates/frontend.html
+++ b/src/templates/frontend.html
@@ -150,6 +150,18 @@
             border: 1px solid #000;
         }
 
+        .slider {
+            -webkit-appearance: none;
+            appearance: none;
+            width: 80%;
+            height: 20px;
+            background: #d3d3d3;
+            outline: none;
+            opacity: 0.7;
+            -webkit-transition: .2s;
+            transition: opacity .2s;
+        }
+
         #Long-Medical-History {
             /* flex: 1; */
             padding: 10px;
