Updated wepage colors

--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -100,7 +100,7 @@
             margin-right: 20px;
             border: 1px solid #000;
             height: 50px;
-            background-color: #EEEEEE;
+            background-color: #FF0000;
         }
 
         #Profile-Information {
