--- a/src/templates/requests_page.html
+++ b/src/templates/requests_page.html
@@ -12,6 +12,7 @@
             box-sizing: border-box;
             height:700px;
             /* border: 1px solid #000; */
+            background-color: #BDBDBD;
         }
 
         .container {
@@ -27,6 +28,7 @@
             flex-direction: column;
             width:50%;
             border: 1px solid #000;
+            background-color: #BDBDBD;
         }
 
         .row {
@@ -44,6 +46,7 @@
             justify-content:center;
             align-items:center;
             display:flex;
+            background-color: #EEEEEE;
         }
 
         .row2 {
@@ -64,6 +67,7 @@
             justify-content:center;
             align-items:center;
             display:flex;
+            background-color: #EEEEEE;
         }
 
         .icons-container {
@@ -75,6 +79,7 @@
             padding-right:40px;
             margin-top:5px;
             border: 1px solid #000;
+            background-color: #D4D4D4;
         }
 
         .blood-type {
@@ -89,6 +94,7 @@
             align-items:center;
             display:flex;
             border-radius:10%;
+            background-color: #EEEEEE;
         }
 
         .available-blood {
@@ -103,6 +109,7 @@
             align-items:center;
             display:flex;
             border-radius:10%;
+            background-color: #EEEEEE;
         }
 
         .distance-away {
@@ -117,6 +124,7 @@
             align-items:center;
             display:flex;
             border-radius:10%;
+            background-color: #EEEEEE;
         }
 
         .rectangle {
@@ -131,6 +139,7 @@
             align-items:center;
             display:flex;
             border-radius:40%;
+            background-color: #EEEEEE;
         }
 
 
@@ -142,11 +151,13 @@
             justify-content:center;
             align-items:center;
             display:flex;
+            background-color: #EEEEEE;
         }
 
 
         .last-row {
             display:flex;
+            background-color: #BDBDBD;
             /* border: 1px solid #000; */
         }
 
@@ -194,6 +205,7 @@
             margin-left:5px;
             border: 1px solid #000;
             border-radius:10%;
+            background-color: #EEEEEE;
         }
 
         .column-1-big-rectangle {
@@ -206,6 +218,7 @@
             margin-left:10px;
             border: 1px solid #000;
             border-radius:10%;
+            background-color: #EEEEEE;
         }
 
         .column-2 {
@@ -224,6 +237,7 @@
             margin-left:10px;
             border: 1px solid #000;
             border-radius:10%;
+            background-color: #EEEEEE;
         }
 
         .column-3-top {
@@ -251,6 +265,7 @@
             margin-left:10px;
             border: 1px solid #000;
             border-radius:10%;
+            background-color: #EEEEEE;
         }
 
         .column-3-small-rectangle {
@@ -265,6 +280,7 @@
             margin-left:30px;
             margin-right:30px;
             border-radius:10%;
+            background-color: #EEEEEE;
         }
 
 
