--- a/src/templates/requests_page.html
+++ b/src/templates/requests_page.html
@@ -329,7 +329,7 @@
             <div class="row row1">
                 <p>Your requests</p>
                 <div>
-                    <a href="/index"><button id="Back" class="back">Back</button></a>
+                    <a href="/"><button id="Back" class="back">Back</button></a>
                 </div>
             </div>
             <div class="row row2">
